some issue cleanup; refs #20082