@@ -37,7 +37,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -135,7 +134,7 @@ public class ManifestBuilder extends AbstractBuilder {
             manifest.addService(search);
         }
 
-        List<PhysicalElement> pages = pagesToInclude.stream().map(pageNo -> getPhysicalElement(pageNo, ele)).collect(Collectors.toList());
+        List<PhysicalElement> pages = pagesToInclude.stream().map(pageNo -> getPhysicalElement(pageNo, ele)).toList();
         populate(ele, manifest, pages);
 
         return manifest;
