@@ -52,7 +52,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -803,10 +802,9 @@ public class ViewManager implements Serializable {
                     DataManager.getInstance().getConfiguration().getViewerMaxImageHeight());
             if (this.imageDeliveryBean.getIiif().isIIIFUrl(page.getFileName())) {
                 return getDownloadOptionsForImage(configuredOptions, null, maxSize, imageFilename);
-            } else {
-                Dimension imageSize = new Dimension(page.getImageWidth(), page.getImageHeight());
-                return getDownloadOptionsForImage(configuredOptions, imageSize, maxSize, imageFilename);
             }
+            Dimension imageSize = new Dimension(page.getImageWidth(), page.getImageHeight());
+            return getDownloadOptionsForImage(configuredOptions, imageSize, maxSize, imageFilename);
         }
 
         return Collections.emptyList();
@@ -1433,7 +1431,7 @@ public class ViewManager implements Serializable {
             throws IndexUnreachableException, PresentationException, IDDOCNotFoundException {
         int newImageOrder = 1;
         if (currentImageOrderString != null && currentImageOrderString.contains("-")) {
-            String[] orderSplit = currentImageOrderString.split("[-]");
+            String[] orderSplit = currentImageOrderString.split("-");
             newImageOrder = StringTools.parseInt(orderSplit[0]).orElse(1);
         } else {
             newImageOrder = StringTools.parseInt(currentImageOrderString).orElse(1);
@@ -2653,11 +2651,8 @@ public class ViewManager implements Serializable {
         }
         double percentage = pagesWithFulltext * 100.0 / pageLoader.getNumPages();
         // logger.trace("{}% of pages have full-text", percentage); //NOSONAR Debug
-        if (percentage < threshold) {
-            return true;
-        }
 
-        return false;
+        return percentage < threshold;
     }
 
     /**
@@ -2969,7 +2964,7 @@ public class ViewManager implements Serializable {
                 if (!displayFilters.isEmpty()) {
                     filenames = filenames.filter(filename -> displayFilters.stream().allMatch(filter -> filter.passes(filename, vr)));
                 }
-                downloadFilenames = filenames.collect(Collectors.toList());
+                downloadFilenames = filenames.toList();
             }
         }
 
@@ -3011,7 +3006,7 @@ public class ViewManager implements Serializable {
                 .sorted(comparator)
                 .map(this::getLinkToDownloadFile)
                 .filter(link -> link != LabeledLink.EMPTY)
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
@@ -3602,9 +3597,9 @@ public class ViewManager implements Serializable {
         String filename = String.format("%s_%s_%s.pdf", this.pi, this.firstPdfPage, this.lastPdfPage);
         try (PipedInputStream in = new PipedInputStream(); OutputStream out = new PipedOutputStream(in)) {
             String firstPageName =
-                    Optional.ofNullable(this.firstPdfPage).flatMap(i -> this.getPage(i)).map(PhysicalElement::getFileName).orElse(null);
+                    Optional.ofNullable(this.firstPdfPage).flatMap(this::getPage).map(PhysicalElement::getFileName).orElse(null);
             String lastPageName =
-                    Optional.ofNullable(this.lastPdfPage).flatMap(i -> this.getPage(i)).map(PhysicalElement::getFileName).orElse(null);
+                    Optional.ofNullable(this.lastPdfPage).flatMap(this::getPage).map(PhysicalElement::getFileName).orElse(null);
 
             SinglePdfRequest request = new SinglePdfRequest(Map.of(
                     "imageSource", DataFileTools.getMediaFolder(this.pi).toAbsolutePath().toString(),
@@ -4101,7 +4096,7 @@ public class ViewManager implements Serializable {
                 lastPage++;
             }
         }
-        return IntStream.range(firstPage, lastPage + 1).boxed().collect(Collectors.toList());
+        return IntStream.range(firstPage, lastPage + 1).boxed().toList();
     }
 
     /**
@@ -4200,7 +4195,7 @@ public class ViewManager implements Serializable {
                 .map(path -> Paths.get(path).getFileName().toString())
                 .map(filename -> this.getPageLoader().findPageForFilename(filename))
                 .filter(p -> p != null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<String> getExternalResourceUrls() throws IndexUnreachableException {
@@ -4215,7 +4210,7 @@ public class ViewManager implements Serializable {
         VariableReplacer vr = new VariableReplacer(this);
         return urlTemplates.stream()
                 .flatMap(templ -> vr.replace(templ).stream())
-                .filter(url -> ExternalFilesDownloader.resourceExists(url))
+                .filter(ExternalFilesDownloader::resourceExists)
                 .toList();
     }
 
